--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
+		"react-router-dom": "^7.5.3",
 		"tailwindcss": "^4.1.5",
 		"vite": "^6.3.1",
 		"vite-tsconfig-paths": "^5.1.4"
