--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@tailwindcss/vite": "^4.1.5",
 		"@vitejs/plugin-react-swc": "^3.8.0",
 		"axios": "^1.9.0",
+		"framer-motion": "^12.10.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
