--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
+		"react-responsive": "^10.0.1",
 		"react-router-dom": "^7.5.3",
 		"tailwindcss": "^4.1.5",
 		"vite": "^6.3.1",
@@ -26,6 +27,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
+		"@types/navermaps": "^3.7.9",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@typescript-eslint/eslint-plugin": "^7.6.0",
