--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -37,5 +37,5 @@
 			"@constants/*": ["src/constants/*"]
 		}
 	},
-	"include": ["src"]
+	"include": ["src", "src/utils/generateStaticMapUrl.ts"]
 }
