--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@vitejs/plugin-react-swc": "^3.8.0",
 		"axios": "^1.9.0",
 		"framer-motion": "^12.10.5",
+		"lottie-react": "^2.4.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
