--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,7 +25,7 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["src/*"],
-			"@types/*": ["src/types/*"],
+			"@type/*": ["src/types/*"],
 			"@stores/*": ["src/stores/*"],
 			"@apis/*": ["src/apis/*"],
 			"@hooks/*": ["src/hooks/*"],
